feature/module1 index file changes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	 <link href="css/site.css" rel="stylesheet">
 </head>
 
+<h1>feature/module1 changes</h1>
+
 <body>
     <div class="main-container">
         <div class="cloud-image">
