feature/module2 h2 changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <title>HTML Application</title>
 	 <link href="css/site.css" rel="stylesheet">
 </head>
-
+<h2>feature/module2 h2 changes </h2>
 <body>
     <div class="main-container">
         <div class="cloud-image">
